feat(dev): update api for information coin-data key config page
